# JarvisOS

./: .gitignore  AGENTS.md  README.md  jarvis.toml.example  pyproject.toml
docs/: architecture.md  current-runtime.md  decisions.md  next-steps.md  prompt-cookbook.md
docs/integrations/: google-workspace-mcp.md
examples/evals/: planner-coverage.json  planner-tool-use.json
examples/mcp/: demo.toml.example  demo_server.py  google-calendar-fastmcp.toml.example  google-calendar-readonly.toml.example  google-gmail-fastmcp.toml.example  google-workspace-fastmcp.toml.example  google_calendar_fastmcp_server.py  google_gmail_fastmcp_server.py  spotify-fastmcp.toml.example  spotify_fastmcp_server.py
examples/plugins/demo_notes/: plugin.toml  tools.py
src/jarvis/: __init__.py  __main__.py  agents.py  approvals.py  cli.py  contracts.py  errors.py  evals.py  mcp.py  memory.py  models.py  orchestrator.py  planner.py  plugins.py  policies.py  prompts.py  runtime.py  settings.py  synthesizer.py  tasks.py  tool_schemas.py  tools.py  traces.py
src/jarvis/integrations/: mcp.py  oauth.py  plugins.py
src/jarvis/models/: __init__.py  router.py
src/jarvis/orchestration/: __init__.py  agent_runtime.py  arguments.py  graph.py  orchestrator.py  planner.py  resume.py  synthesizer.py
src/jarvis/prompts/: planner.md  synthesis.md  tool_use.md
src/jarvis/storage/: __init__.py  approvals.py  auth.py  journal.py
tests/: test_agent_metadata.py  test_evals_reliability.py  test_execution_graph.py  test_hardening.py  test_plugins_metadata.py  test_runtime.py
(+4 files in other folders)
