[project]
name = "jarvis-os"
version = "0.1.0"
description = "Terminal-first personal agent orchestration runtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
jarvis = "jarvis.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

